WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275766
REGRESSION(
277275@main
) Excel login window is compressed
https://bugs.webkit.org/show_bug.cgi?id=275766
Summary
REGRESSION(277275@main) Excel login window is compressed
alan
Reported
2024-06-21 18:20:04 PDT
<
rdar://127376777
>
Attachments
Patch
(3.53 KB, patch)
2024-06-21 18:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(20.18 KB, patch)
2024-06-21 21:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-06-21 18:25:46 PDT
Created
attachment 471723
[details]
Patch
alan
Comment 2
2024-06-21 21:24:04 PDT
Created
attachment 471724
[details]
[fast-cq]Patch
EWS
Comment 3
2024-06-22 05:30:43 PDT
Committed
280277@main
(619f0ebf6a1f): <
https://commits.webkit.org/280277@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471724
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug