REGRESSION(277275@main) Excel login window is compressed https://bugs.webkit.org/show_bug.cgi?id=275766 <rdar://127376777>

Reviewed by Antti Koivisto.

Let's distribute the available space across columns when none of them has content (all cells are empty).
(This is a long-standing bug. 277275@main just exposed it by not forcing AutoTableLayout::recalcColumn call -which incorrectly sets emptyCellsOnly to false for the subsequent AutoTableLayout::layout call).

* LayoutTests/fast/table/table-with-out-of-flow-content-only-expected.html: Added.
* LayoutTests/fast/table/table-with-out-of-flow-content-only.html: Added.
* Source/WebCore/rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::layout):

(expected result changes -> all progressions)

Canonical link: https://commits.webkit.org/280277@main